--- a/zpw/lab5/shop-app/src/tsconfig.app.json
+++ b/zpw/lab5/shop-app/src/tsconfig.app.json
@@ -7,5 +7,9 @@
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
-  ]
+  ],
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "allowJs": true
+  }
 }
