--- a/lab2/Podfile
+++ b/lab2/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-platform :ios, '9.0'
+platform :ios, '10.0'
 
 target 'Lab2_TemplateApp' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
@@ -7,6 +7,7 @@ target 'Lab2_TemplateApp' do
 
   # Pods for Lab2_TemplateApp
   pod 'NotificationBannerSwift'
+  pod 'Alamofire', '~> 5.0.0.beta.1'
 end
 
 
